<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">OpenScoreboard</string>
    <string name="home">Home</string>
    <string name="away">Visitor</string>
    <string name="game_clock">Game Clock</string>
    <string name="start_game_clock">Start Game Clock</string>
    <string name="stop_game_clock">Stop Game Clock</string>
    <string name="reset_score">Reset Score</string>
    <string name="reset_game_clock">Reset Clock</string>
    <string name="enter_game_time">Enter Game Time</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="zero">0</string>
    <string name="separator">&#8226;</string>
    
</resources>
